feat: add history example and fix, and fix guitar selection

--- a/src/components/MainPanel/MainPanel.css
+++ b/src/components/MainPanel/MainPanel.css
@@ -5,6 +5,7 @@
     "guitar-frame history-blurb";
   grid-template-columns: 489px 1fr;
   grid-template-rows: 55px 595px;
+  margin-bottom: 16px;
   margin-left: auto;
   margin-right: auto;
   height: 650px;
