--- a/src/components/HistoryBlurb/HistoryBlurb.css
+++ b/src/components/HistoryBlurb/HistoryBlurb.css
@@ -3,5 +3,15 @@
   font-size: x-large;
   font-weight: 400;
   grid-area: history-blurb;
-  padding: 8px;
+  max-height: 595px;
+  overflow-y: scroll;
+  padding: 16px;
+  white-space: pre-line;
+  /* hide scrollbar but allow scrolling */
+  -ms-overflow-style: none; /* for Internet Explorer, Edge */
+  scrollbar-width: none; /* for Firefox */
+}
+/* hide scrollbar but allow scrolling */
+.history-blurb::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
 }
