feat: tweak styles and add fretboard trainer cta

--- a/src/components/Subtitle/Subtitle.css
+++ b/src/components/Subtitle/Subtitle.css
@@ -1,5 +1,6 @@
 .subtitle {
   color: white;
-  font-size: 4vh;
-  margin: 1vh 5vw 5vh;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: 30px;
+  margin: 10px 5vw 20px;
 }
