--- a/src/components/HistoryBlurb/HistoryBlurb.css
+++ b/src/components/HistoryBlurb/HistoryBlurb.css
@@ -1,5 +1,5 @@
 .history-blurb {
-  font-family: 'Times New Roman', Times, serif;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-size: x-large;
   font-weight: 400;
   grid-area: history-blurb;
