--- a/src/components/PageTitle/Title.css
+++ b/src/components/PageTitle/Title.css
@@ -1,5 +1,6 @@
 .title {
   color: white;
-  font-size: 10vh;
-  margin: 2vh;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: 48px;
+  margin: 20px;
 }
