--- a/src/components/GuitarFrame/GuitarFrame.css
+++ b/src/components/GuitarFrame/GuitarFrame.css
@@ -25,3 +25,26 @@
   width: 300px;
   z-index: 1;
 }
+
+@media screen and (max-width: 500px) {
+  .guitar-frame-container {
+    height: 357px;
+    width: 293px;
+  }
+
+  .guitar-frame {
+    height: 357px;
+    left: 0px;
+    margin-left: -15px;
+    position: absolute;
+    width: 293px;
+  }
+
+  .guitar-image-with-shadow {
+    box-shadow: inset 0px 0px 30px 10px black;
+    height: 240px;
+    margin-left: 42px;
+    margin-top: 60px;
+    width: 180px;
+  }  
+}
