--- a/src/components/HistoryBlurb/HistoryBlurb.css
+++ b/src/components/HistoryBlurb/HistoryBlurb.css
@@ -15,3 +15,9 @@
 .history-blurb::-webkit-scrollbar {
   display: none; /* for Chrome, Safari, and Opera */
 }
+
+@media screen and (max-width: 500px) {
+  .history-blurb {
+    max-height: unset;
+  }
+}
